k8s/NetworkPolicy/allow-EventService-egress-to-Mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eventservice-egress-to-mongodb
  namespace: zerotrust
spec:
  podSelector:
    matchLabels:
      app: event-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb
      ports:
        - protocol: TCP
          port: 27017
