k8s/NetworkPolicy/allow-EventService-to-Mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eventservice-to-mongodb
  namespace: zerotrust
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: event-service
      ports:
        - protocol: TCP
          port: 27017
