k8s/NetworkPolicy/allow-TestClient-to-EventService.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-testclient-to-eventservice
  namespace: zerotrust
spec:
  podSelector:
    matchLabels:
      app: event-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: test-client
      ports:
        - protocol: TCP
          port: 8080
# spec: podSelector: matchLabels: app: event-service
# 해당 event-service 라벨의 Pod 에 대상 인 NetworkPolicy
# ingress: from: podSelector: matchLabels: app: test-client
# test-client 라벨의 Pod 에서 나가는 트래픽 허용
